[ClearMine] 1. 保存自定义语言和主题的路径              2. 修正语言切换到自定义后程序无法再次启动的问题              3. 修正语言切换到自定义后插件的语言无法正确加载的问题
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@187 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -103,6 +103,7 @@
     <Compile Include="ComponentModel\UI\MenuItemData.cs" />
     <Compile Include="ComponentModel\UI\ViewModelBase.cs" />
     <Compile Include="Difficulty.cs" />
+    <Compile Include="GenericEventArgs.cs" />
     <Compile Include="HeroHistory.cs" />
     <Compile Include="Messaging\ListeningPriority.cs" />
     <Compile Include="Messaging\SwitchLanguageMessage.cs" />
