--- a/ClearMine/app.config
+++ b/ClearMine/app.config
@@ -86,6 +86,12 @@
             <setting name="CurrentTheme" serializeAs="String">
                 <value>luna.normalcolor</value>
             </setting>
+            <setting name="CustomLanguageFile" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="CustomThemeFile" serializeAs="String">
+                <value />
+            </setting>
         </ClearMine.Common.Properties.Settings>
     </userSettings>
     <applicationSettings>
