--- a/ClearMine.Dialogs/ClearMine.Dialogs.csproj
+++ b/ClearMine.Dialogs/ClearMine.Dialogs.csproj
@@ -47,6 +47,11 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <OutputPath>..\bin\Release\</OutputPath>
     <BaseAddress>25165824</BaseAddress>
+    <CodeAnalysisRuleSet>ExtendedDesignGuidelineRules.ruleset</CodeAnalysisRuleSet>
+    <Optimize>true</Optimize>
+    <DefineConstants>TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
