--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -104,16 +104,19 @@
     <Compile Include="ComponentModel\UI\IViewModel.cs" />
     <Compile Include="ComponentModel\UI\MenuItemData.cs" />
     <Compile Include="ComponentModel\UI\ViewModelBase.cs" />
-    <Compile Include="Difficulty.cs" />
+    <Compile Include="Model\Difficulty.cs" />
     <Compile Include="GenericEventArgs.cs" />
-    <Compile Include="HeroHistory.cs" />
+    <Compile Include="Model\HeroHistory.cs" />
     <Compile Include="Messaging\ListeningPriority.cs" />
     <Compile Include="Messaging\SwitchLanguageMessage.cs" />
     <Compile Include="Messaging\SwitchThemeMessage.cs" />
+    <Compile Include="Model\HeroHistoryList.cs" />
+    <Compile Include="Model\HistoryRecord.cs" />
     <Compile Include="Modularity\AbstractPlugin.cs" />
     <Compile Include="Modularity\IPlugin.cs" />
     <Compile Include="Modularity\PluginOption.cs" />
     <Compile Include="Utilities\DataMap.cs" />
+    <Compile Include="Utilities\DataMapItem.cs" />
     <Compile Include="Utilities\IVisualShoot.cs" />
     <Compile Include="Utilities\LanguageSwitcher.cs" />
     <Compile Include="Utilities\ResourceHelper.cs" />
