--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Dialogs\OptionDialog.cs" />
     <Compile Include="Messages\HelpRequestedMessage.cs" />
     <Compile Include="Messages\HelpRequestedMessageProcessor.cs" />
+    <Compile Include="Messages\PopupDialog.cs" />
     <Compile Include="Messages\ShowDialogMessage.cs" />
     <Compile Include="FrameworkModule.cs" />
     <Compile Include="Interactivity\Behavior.cs" />
