[ClearMine] 提供在不安装Shader Build Task时，编译ClearMine.Effects的方法。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@197 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Effects/ClearMine.Effects.csproj
+++ b/ClearMine.Effects/ClearMine.Effects.csproj
@@ -52,7 +52,6 @@
       <SubType>Code</SubType>
     </Compile>
     <AppDesigner Include="Properties\" />
-    <Effect Include="ShaderSource\Wave.fx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClearMine.Common\ClearMine.Common.csproj">
@@ -61,10 +60,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Effect Include="ShaderSource\Mono.fx" />
+    <None Include="ReadMe.txt" />
+    <None Include="ShaderSource\Mono.ps.prebuild" />
+    <None Include="ShaderSource\Wave.ps.prebuild" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ReadMe.txt" />
+    <Effect Include="ShaderSource\Mono.fx" />
+    <Effect Include="ShaderSource\Wave.fx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EffectCompile" Condition="'@(Effect)' != '' ">
