[ClearMine] 将主界面显示功能放在VM中。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@198 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.VM/ClearMine.VM.csproj
+++ b/ClearMine.VM/ClearMine.VM.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Commands\GameCommandBindings.cs" />
     <Compile Include="GameWonDetailsViewModel.cs" />
     <Compile Include="GameWonViewModel.cs" />
+    <Compile Include="MainModule.cs" />
     <Compile Include="PluginsViewModel.cs" />
     <Compile Include="OptionsViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
