[ClearMine] Ubuntu风格窗口雏形
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@199 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -98,6 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Behaviors\AnimateEffectBehavior.cs" />
+    <Compile Include="Behaviors\DragMoveBehavior.cs" />
     <Compile Include="Behaviors\SortableListViewBehavior.cs" />
     <Compile Include="Behaviors\SortInfo.cs" />
     <Compile Include="Controls\BindableDynamicResource.cs" />
@@ -109,7 +110,9 @@
     <Compile Include="Controls\MineCellControl.cs" />
     <Compile Include="Controls\MinesPanel.cs" />
     <Compile Include="Controls\NumberPresenter.cs" />
+    <Compile Include="Controls\ResizeDirection.cs" />
     <Compile Include="Controls\SingleNumber.cs" />
+    <Compile Include="Controls\ThumbExt.cs" />
     <Compile Include="Controls\VisualAdorner.cs" />
     <Compile Include="Converters\CacheStateToVisibilityConverter.cs" />
     <Compile Include="Converters\DifficultyToBooleanConverter.cs" />
