[ClearMine] 1. 完成Ubuntu风格窗口的功能 2. 优化ubutu风格的界面
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@202 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -137,6 +137,7 @@
       <SubType>Code</SubType>
     </Compile>
     <AppDesigner Include="Properties\" />
+    <Compile Include="UICommands.cs" />
     <Compile Include="Visual\VisualShooter.cs" />
   </ItemGroup>
   <ItemGroup>
