[ClearMine] 将Window的Style应用在所有主要弹出框上。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@203 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Controls\SingleNumber.cs" />
     <Compile Include="Controls\ThumbExt.cs" />
     <Compile Include="Controls\VisualAdorner.cs" />
+    <Compile Include="Controls\WindowExt.cs" />
     <Compile Include="Converters\CacheStateToVisibilityConverter.cs" />
     <Compile Include="Converters\DifficultyToBooleanConverter.cs" />
     <Compile Include="Converters\LightUpsToBooleanConverter.cs" />
@@ -137,6 +138,7 @@
       <SubType>Code</SubType>
     </Compile>
     <AppDesigner Include="Properties\" />
+    <Compile Include="UICommandBindings.cs" />
     <Compile Include="UICommands.cs" />
     <Compile Include="Visual\VisualShooter.cs" />
   </ItemGroup>
