[ClearMine] 削减两个用处不大的类
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@204 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -104,6 +104,7 @@
     <Compile Include="ComponentModel\UI\IViewModel.cs" />
     <Compile Include="ComponentModel\UI\MenuItemData.cs" />
     <Compile Include="ComponentModel\UI\ViewModelBase.cs" />
+    <Compile Include="Messaging\UIComponentLoadedMessage.cs" />
     <Compile Include="Model\Difficulty.cs" />
     <Compile Include="GenericEventArgs.cs" />
     <Compile Include="Model\HeroHistory.cs" />
