[ClearMine] 更新版权信息
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@209 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/trunk/ClearMine/app.config
+++ b/trunk/ClearMine/app.config
@@ -103,7 +103,7 @@
                 <value>SavedGame.cmg</value>
             </setting>
             <setting name="ScreenShotFolder" serializeAs="String">
-                <value>\Poleaf\ClearMine\ScreenShoots\</value>
+                <value>\Fadefy\ClearMine\ScreenShoots\</value>
             </setting>
             <setting name="ScreenShotFileTimeFormat" serializeAs="String">
                 <value>yy-MM-dd-HH-mm-ss</value>
