--- a/trunk/ClearMine.Common/Properties/Settings.settings
+++ b/trunk/ClearMine.Common/Properties/Settings.settings
@@ -66,7 +66,7 @@
       <Value Profile="(Default)">SavedGame.cmg</Value>
     </Setting>
     <Setting Name="ScreenShotFolder" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">\Poleaf\ClearMine\ScreenShoots\</Value>
+      <Value Profile="(Default)">\Fadefy\ClearMine\ScreenShoots\</Value>
     </Setting>
     <Setting Name="ScreenShotFileTimeFormat" Type="System.String" Scope="Application">
       <Value Profile="(Default)">yy-MM-dd-HH-mm-ss</Value>
